--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
   "bugs": {
     "url": "https://github.com/JorgenVatle/feathers-factory/issues"
   },
-  "homepage": "https://github.com/JorgenVatle/feathers-factory#readme"
+  "homepage": "https://github.com/JorgenVatle/feathers-factory#readme",
+  "devDependencies": {
+    "typescript": "^3.3.4000"
+  }
 }
