Add build and watch scripts to package.json.

--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Create data factories for your Feathers services",
   "main": "dist/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "tsc",
+    "dev": "npm run build -- --watch"
   },
   "repository": {
     "type": "git",
