--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "Create data factories for your Feathers services",
   "main": "dist/FeathersFactory.js",
+  "types": "dist/FeathersFactory.d.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc",
