--- a/package.json
+++ b/package.json
@@ -5,10 +5,11 @@
   "main": "dist/FeathersFactory.js",
   "types": "dist/FeathersFactory.d.ts",
   "scripts": {
+    "dev": "npm run build -- --watch",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "prepublish": "npm run build",
     "build": "tsc",
-    "dev": "npm run build -- --watch"
+    "prepublish": "npm run build",
+    "postpublish": "git push && git push --tags"
   },
   "repository": {
     "type": "git",
