Add mocha, expect, ts-node as well as types to dev dependencies.

--- a/package.json
+++ b/package.json
@@ -31,7 +31,12 @@
   },
   "homepage": "https://github.com/JorgenVatle/feathers-factory#readme",
   "devDependencies": {
+    "@types/expect": "^1.20.4",
     "@types/feathersjs__feathers": "^3.1.1",
+    "@types/mocha": "^5.2.6",
+    "expect": "^24.7.0",
+    "mocha": "^6.0.2",
+    "ts-node": "^8.0.3",
     "typescript": "^3.3.4000"
   },
   "dependencies": {
