--- a/package.json
+++ b/package.json
@@ -31,10 +31,12 @@
   },
   "homepage": "https://github.com/JorgenVatle/feathers-factory#readme",
   "devDependencies": {
+    "@feathersjs/feathers": "^3.3.1",
     "@types/expect": "^1.20.4",
     "@types/feathersjs__feathers": "^3.1.1",
     "@types/mocha": "^5.2.6",
     "expect": "^24.7.0",
+    "feathers-memory": "^3.0.2",
     "mocha": "^6.0.2",
     "ts-node": "^8.0.3",
     "typescript": "^3.3.4000"
