--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,7 @@
      "outDir": "./dist",                        /* Redirect output structure to the directory. */
 //     "rootDir": "./src",                       /* Specify the root directory of input files. Use to control the output directory structure with --outDir. */
     "rootDirs": [
-      "src"
+      "src",
       "test"
     ],
     // "composite": true,                     /* Enable project compilation */
