--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   "homepage": "https://github.com/JorgenVatle/feathers-factory#readme",
   "devDependencies": {
     "@faker-js/faker": "^6.2.0",
+    "@feathersjs/adapter-commons": "^4.5.12",
     "@feathersjs/feathers": "^4.5.7",
     "@types/expect": "^1.20.4",
     "@types/mocha": "^5.2.6",
