Define registry and auth token for pre-release workflow.

--- a/.github/workflows/pre-release.yml
+++ b/.github/workflows/pre-release.yml
@@ -22,9 +22,14 @@ jobs:
 
       - name: 'Setup Node.js'
         uses: actions/setup-node@v3
+        with:
+          node-version: '16.x'
+          registry-url: 'https://registry.npmjs.org'
 
       - name: 'Add Version'
         run: npm version prerelease
 
       - name: 'Publish'
         run: npm publish
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
