--- a/.github/workflows/pre-release.yml
+++ b/.github/workflows/pre-release.yml
@@ -16,6 +16,11 @@ jobs:
       - name: 'Checkout repository'
         uses: actions/checkout@v3
 
+      - name: 'Configure Git'
+        run: |
+          git config user.name github-actions
+          git config user.email github-actions@github.com
+
       - name: 'Setup Node.js'
         uses: actions/setup-node@v3
         with:
