Correct reusable workflow path in pre-release.yml

--- a/.github/workflows/pre-release.yml
+++ b/.github/workflows/pre-release.yml
@@ -7,7 +7,7 @@ on:
 jobs:
   test:
     name: 'Run Tests'
-    uses: '.github/workflows/test.yml'
+    uses: ./.github/workflows/test.yml
 
   publish:
     name: 'Pre-release'
