--- a/.github/workflows/pre-release.yml
+++ b/.github/workflows/pre-release.yml
@@ -27,6 +27,9 @@ jobs:
           node-version: '16.x'
           registry-url: 'https://registry.npmjs.org'
 
+      - name: 'Install dependencies'
+        run: npm ci
+
       - name: 'Add Version'
         run: npm version prerelease
 
