--- a/.github/workflows/pre-release.yml
+++ b/.github/workflows/pre-release.yml
@@ -18,8 +18,8 @@ jobs:
 
       - name: 'Configure Git'
         run: |
-          git config user.name github-actions
-          git config user.email github-actions@github.com
+          git config user.name ${{ github.actor }}
+          git config user.email octocat@github.com
 
       - name: 'Setup Node.js'
         uses: actions/setup-node@v3
