--- a/.github/workflows/pre-release.yml
+++ b/.github/workflows/pre-release.yml
@@ -10,30 +10,9 @@ jobs:
     uses: ./.github/workflows/test.yml
 
   publish:
-    name: 'Pre-release'
-    runs-on: ubuntu-20.04
-    steps:
-      - name: 'Checkout repository'
-        uses: actions/checkout@v3
-
-      - name: 'Configure Git'
-        run: |
-          git config user.name ${{ github.actor }}
-          git config user.email octocat@github.com
-
-      - name: 'Setup Node.js'
-        uses: actions/setup-node@v3
-        with:
-          node-version: '16.x'
-          registry-url: 'https://registry.npmjs.org'
-
-      - name: 'Install dependencies'
-        run: npm ci
-
-      - name: 'Add Version'
-        run: npm version prerelease
-
-      - name: 'Publish'
-        run: npm publish
-        env:
-          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+    name: 'Run Tests'
+    uses: ./.github/workflows/release.yml
+    with:
+      version: prerelease
+    secrets:
+      NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
