--- a/.github/workflows/publish-release.yml
+++ b/.github/workflows/publish-release.yml
@@ -14,6 +14,7 @@ jobs:
 
   publish:
     name: 'Publish package'
+    needs: test
     uses: ./.github/workflows/release.yml
     if: github.ref == 'refs/head/master'
     secrets:
