--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "feathers-factory",
   "version": "4.0.0",
   "description": "Create data factories for your Feathers services",
-  "main": "dist/FeathersFactory.js",
+  "main": "./dist/FeathersFactory.js",
   "types": "dist/FeathersFactory.d.ts",
   "scripts": {
     "test": "cross-env NODE_ENV=test mocha",
