--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "feathers-memory": "^3.0.2",
     "mocha": "^6.0.2",
     "ts-node": "^8.0.3",
+    "tsup": "^8.4.0",
     "typescript": "^4.6.3"
   },
   "dependencies": {
