--- a/package.json
+++ b/package.json
@@ -35,14 +35,15 @@
     "@feathersjs/feathers": "^4.5.7",
     "@types/expect": "^1.20.4",
     "@types/mocha": "^5.2.6",
-    "@types/node": "^14.0.27",
+    "@types/node": "^20.17.46",
     "cross-env": "^5.2.0",
     "expect": "^24.7.0",
     "feathers-memory": "^3.0.2",
     "mocha": "^6.0.2",
     "ts-node": "^8.0.3",
     "tsup": "^8.4.0",
-    "typescript": "^4.6.3"
+    "typescript": "^5.8.3",
+    "vitest": "^3.1.3"
   },
   "dependencies": {
     "clues": "^4.0.2"
