Disable unused parameters linter

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,7 @@
 
     "strict": true,
     "noUnusedLocals": true,
-    "noUnusedParameters": true,
+    "noUnusedParameters": false,
     "noImplicitReturns": true,
     "noFallthroughCasesInSwitch": true,
     "esModuleInterop": true
