--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "prepack": "npm run build",
     "prepublishOnly": "npm run lint && npm test",
     "postversion": "git push && git push --tags",
-    "release": "npm ",
+    "release": "changeset",
     "build": "tsup",
     "lint": "tsc --noEmit"
   },
