--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,13 +1,8 @@
 name: 'Release'
 on:
-  workflow_call:
-    inputs:
-      version:
-        type: string
-        required: false
-    secrets:
-      NPM_TOKEN:
-        required: true
+  push:
+    branches:
+      - master
 
 jobs:
   publish:
@@ -15,7 +10,7 @@ jobs:
     runs-on: ubuntu-20.04
     steps:
       - name: 'Checkout repository'
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: 'Configure Git'
         run: |
@@ -31,11 +26,12 @@ jobs:
       - name: 'Install dependencies'
         run: npm ci
 
-      - name: 'Add Version'
-        if: inputs.version != null
-        run: npm version ${{ inputs.version }}
-
-      - name: 'Publish'
-        run: npm publish
+      - name: Create Release Pull Request or Publish to npm
+        uses: changesets/action@v1
+        with:
+          # This expects you to have a script called release which does a build for your packages and calls changeset publish
+          publish: npm run release
         env:
-          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+
