--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,4 +1,5 @@
 name: 'Release'
+run-name: '📦 Release: ${{ github.event.head_commit.message || github.event.pull_request.title }}'
 on:
   push:
     branches:
