--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,4 +1,5 @@
 name: 'Tests'
+run-name: '🧪 Test: ${{ github.event.head_commit.message || github.event.pull_request.title }}'
 on:
   push:
     branches:
