--- a/package.json
+++ b/package.json
@@ -33,6 +33,9 @@
     "fixtures",
     "data"
   ],
+  "publishConfig": {
+    "access": "public"
+  },
   "author": "JorgenVatle",
   "license": "ISC",
   "bugs": {
