Add permission list to release workflow

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -6,6 +6,11 @@ on:
       - master
       - beta
 
+permissions:
+  contents: write
+  pull-requests: write
+  statuses: read
+
 jobs:
   publish:
     name: 'Release'
