--- a/package.json
+++ b/package.json
@@ -52,11 +52,11 @@
     "feathers-memory": "^3.0.2",
     "ts-node": "^8.0.3",
     "tsup": "^8.4.0",
-    "type-fest": "^4.41.0",
     "typescript": "^5.8.3",
     "vitest": "^3.1.3"
   },
   "dependencies": {
-    "clues": "^4.0.2"
+    "clues": "^4.0.2",
+    "type-fest": "^4.41.0"
   }
 }
