--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,7 @@
 
     "strict": true,
     "noImplicitReturns": true,
+    "types": [],
     "noFallthroughCasesInSwitch": true,
     "esModuleInterop": true,
     "skipLibCheck": true
