Move tsconfig into basic feathers app dir

--- a/examples/_basic-feathers-app/tsconfig.json
+++ b/examples/_basic-feathers-app/tsconfig.json
@@ -1,9 +1,9 @@
 {
-  "extends": "../tsconfig.json",
+  "extends": "../../tsconfig.json",
   "compilerOptions": {
     "paths": {
       "feathers-factory": [
-        "../src/index.ts"
+        "../../src/index.ts"
       ]
     }
   },
