--- a/examples/_basic-feathers-app/package.json
+++ b/examples/_basic-feathers-app/package.json
@@ -6,14 +6,10 @@
   "directories": {
     "test": "test"
   },
-  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
-  "description": "",
-  "dependencies": {
-    "feathers-factory": "*"
-  }
+  "description": ""
 }
