Add pathing for feathers-factory to main tsconfig to work around issue with vitest resolver workspaces.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,5 +15,11 @@
     "esModuleInterop": true,
     "skipLibCheck": true,
 
+    "paths": {
+      "feathers-factory": [
+        "./src/index.ts"
+      ]
+    }
+
   },
 }
