--- a/package.json
+++ b/package.json
@@ -1,63 +1,19 @@
 {
-  "name": "feathers-factory",
-  "version": "5.1.0-beta.0",
-  "description": "Create data factories for your Feathers services",
-  "main": "./dist/index.js",
-  "types": "dist/index.d.ts",
-  "exports": {
-    ".": {
-      "types": "./dist/index.d.ts",
-      "import": "./dist/index.mjs",
-      "require": "./dist/index.js"
-    }
-  },
+  "name": "feathers-factory-root",
+  "private": true,
+  "version": "0.0.0",
   "scripts": {
     "test": "vitest",
-    "prepack": "npm run build",
-    "prepublishOnly": "npm run lint && npm test",
-    "postversion": "git push && git push --tags",
     "release": "changeset publish",
-    "build": "tsup",
-    "lint": "tsc --noEmit"
+    "build": "npm run build -w packages/feathers-factory",
+    "lint": "npm run lint -w packages/feathers-factory"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/JorgenVatle/feathers-factory.git"
-  },
-  "files": [
-    "dist"
-  ],
-  "keywords": [
-    "factory",
-    "feathers",
-    "fixtures",
-    "data"
-  ],
-  "publishConfig": {
-    "access": "public"
-  },
-  "author": "JorgenVatle",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/JorgenVatle/feathers-factory/issues"
-  },
-  "homepage": "https://github.com/JorgenVatle/feathers-factory#readme",
   "devDependencies": {
     "@changesets/cli": "^2.29.4",
-    "@faker-js/faker": "^9.7.0",
-    "@feathersjs/feathers": "^5.0.34",
-    "@types/node": "^20.17.46",
-    "cross-env": "^5.2.0",
-    "ts-node": "^8.0.3",
-    "tsup": "^8.4.0",
-    "typescript": "^5.8.3",
     "vitest": "^3.1.3"
   },
-  "dependencies": {
-    "clues": "^4.0.2",
-    "type-fest": "^4.41.0"
-  },
   "workspaces": [
-    "examples/_basic-feathers-app"
+    "examples/_basic-feathers-app",
+    "packages/feathers-factory"
   ]
 }
