Inherit paths type from root tsconfig

--- a/examples/_basic-feathers-app/tsconfig.json
+++ b/examples/_basic-feathers-app/tsconfig.json
@@ -1,12 +1,6 @@
 {
-  "extends": "../../packages/feathers-factory/tsconfig.json",
-  "compilerOptions": {
-    "paths": {
-      "feathers-factory": [
-        "../../src/index.ts"
-      ]
-    }
-  },
+  "extends": "../../tsconfig.json",
+  "compilerOptions": {},
   "include": [
     "./**/*.ts"
   ]
