--- a/packages/feathers-factory/package.json
+++ b/packages/feathers-factory/package.json
@@ -48,8 +48,7 @@
     "@feathersjs/feathers": "^5.0.34",
     "@types/node": "^20.17.46",
     "tsup": "^8.4.0",
-    "typescript": "^5.8.3",
-    "vitest": "^3.1.3"
+    "typescript": "^5.8.3"
   },
   "dependencies": {
     "clues": "^4.0.2",
