Add basic-feathers-example-app to ignored changeset packages

--- a/.changeset/config.json
+++ b/.changeset/config.json
@@ -7,5 +7,5 @@
   "access": "restricted",
   "baseBranch": "beta",
   "updateInternalDependencies": "patch",
-  "ignore": []
+  "ignore": ["basic-feathers-example-app"]
 }
